--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,3 +25,18 @@ body {
     )
     rgb(var(--background-start-rgb));
 }
+
+
+@layer base {
+  h1 {
+      @apply text-8xl
+  }
+
+  h2 {
+      @apply text-3xl
+  }
+
+  h3 {
+      @apply text-2xl
+  }
+}
