--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,17 +26,16 @@ body {
     rgb(var(--background-start-rgb));
 }
 
-
 @layer base {
   h1 {
-      @apply text-8xl
+    @apply text-8xl;
   }
 
   h2 {
-      @apply text-3xl
+    @apply text-3xl;
   }
 
   h3 {
-      @apply text-2xl
+    @apply text-2xl;
   }
 }
